# belgian-transport-pipeline

./: .env.example  .gitignore  DECISIONS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
dbt_models/: .user.yml  profiles.yml
dbt_models/belgian_transport/: .user.yml  dbt_project.yml  profiles.yml
dbt_models/belgian_transport/macros/: read_parquet.sql
dbt_models/belgian_transport/models/marts/: dim_stations.sql  dim_time.sql  fct_delays.sql  mart_delay_summary.sql  marts.yml
dbt_models/belgian_transport/models/staging/: sources.yml  stg_departures.sql  stg_departures.yml
ingestion/: irail_client.py  kafka_consumer.py  kafka_producer.py  main.py  storage.py
orchestration/: run_pipeline.py
orchestration/dags/: pipeline_dag.py
processing/: spark_clean.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf
terraform/modules/security/: main.tf  outputs.tf
terraform/modules/storage/: main.tf  outputs.tf
terraform/terraform/: outputs.tf  terraform.tfvars.example
tests/: test_ingestion.py  test_kafka.py  test_processing.py
