[project]
name = "belgian-transport-pipeline"
version = "0.1.0"
description = "End-to-end Belgian public transport data pipeline — iRail + De Lijn → Kafka → Spark → dbt → Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "flake8>=7.2.0",
    "black>=25.1.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]