[project]
name = "belgian-transport-pipeline"
version = "0.1.0"
description = "End-to-end Belgian public transport data pipeline — iRail + De Lijn → Kafka → Spark → dbt → Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.1.8",
    "azure-identity>=1.25.3",
    "azure-storage-file-datalake>=12.23.0",
    "confluent-kafka>=2.13.2",
    "databricks-sdk>=0.102.0",
    "databricks-sql-connector>=2.0.2",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "flake8>=7.2.0",
    "black>=25.1.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
